feat: 🎸 調整提示訊息

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="message-content flex justify-end"></div>
       <div class="output-container flex">
         <span class="operator-icon"></span>
         <div class="output-content flex justify-end"></div>
